# LearnOpenGL

./: CMakeLists.txt  LearnOpenGL.sln
LearnOpenGL/: LearnOpenGL.vcxproj  LearnOpenGL.vcxproj.filters
LearnOpenGL/Debug/: LearnOpenGL.exe.recipe  LearnOpenGL.ilk  vc142.idb  vc143.idb
LearnOpenGL/Debug/LearnOpenGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  LearnOpenGL.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
LearnOpenGL/res/shaders/: Basic.shader
LearnOpenGL/src/: Application.cpp  IndexBuffer.cpp  IndexBuffer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  renderer.cpp  renderer.h
